[package]
name = "slack-message-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_xlsxwriter = "0.80"
chrono = "0.4"
dotenvy = "0.15"
anyhow = "1.0"
